--- a/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -4251,6 +4251,21 @@ spec:
                     description: Configuration settings related to the dashboard used
                       by the Che installation.
                     properties:
+                      branding:
+                        description: Dashboard branding resources.
+                        properties:
+                          logo:
+                            description: Dashboard logo.
+                            properties:
+                              base64data:
+                                type: string
+                              mediatype:
+                                type: string
+                            required:
+                            - base64data
+                            - mediatype
+                            type: object
+                        type: object
                       deployment:
                         description: Deployment override options.
                         properties:
@@ -6813,6 +6828,17 @@ spec:
                       type: string
                     description: The node selector limits the nodes that can run the
                       workspace pods.
+                    type: object
+                  persistUserHome:
+                    description: PersistUserHome defines configuration options for
+                      persisting the user home directory in workspaces.
+                    properties:
+                      enabled:
+                        description: Determines whether the user home directory in
+                          workspaces should persist between workspace shutdown and
+                          startup. Must be used with the 'per-user' or 'per-workspace'
+                          PVC strategy in order to take effect. Disabled by default.
+                        type: boolean
                     type: object
                   podSchedulerName:
                     description: Pod scheduler for the workspace pods. If not specified,
